fait fonctionner la barre de recherche du header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,13 +13,7 @@
         </button>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-         <form class="searchbox">
-          <input type="search" placeholder="Rechercher un produit, un tutoriel, ..." name="search" class="searchbox-input" required>
-          <button type="submit" class="searchbox-submit"></button>
-          <span class="searchbox-icon">
-            <i class="fa fa-search"></i>
-          </span>
-        </form>
+        <%= render 'layouts/header_search'%>
         <ul class="nav navbar-nav">
           <li class="block-user">
             <%= link_to root_path do %>
