ajout lien sur le header des categories principales

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,188 +35,7 @@
           </li>                
         </ul>
       </div>
-      <ul class="categories">
-        <li class="primary-category peinture-colle">
-          <%= link_to 'Peintures et colles', category_path('peinture-colles') %>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category enduit">
-          <%= link_to 'Enduits', category_path('enduits') %>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category gros-oeuvre">
-          <%= link_to 'Gros oeuvre', category_path('gros-oeuvre') %>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category bois">
-          <%= link_to 'Bois', category_path('bois') %>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category gros-oeuvre">
-          <a href="#">Portes & fenêtres</a>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category gros-oeuvre">
-          <a href="#">Production d'énergie verte</a>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category gros-oeuvre">
-          <a href="#">Gros oeuvres</a>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category gros-oeuvre">
-          <a href="#">Chauffage</a>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-        <li class="primary-category gros-oeuvre">
-          <a href="#">Isolation</a>
-          <ul>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-            <li>
-              <a href="#">item1</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
+      <%= render 'layouts/header_categories' %>
     </div>
   </nav>
 </header>
