--- a/app/views/layouts/_header_categories.html.erb
+++ b/app/views/layouts/_header_categories.html.erb
@@ -1,181 +1,172 @@
 <ul class="categories">
   <li class="primary-category peinture-colle">
     <%= link_to 'Peintures et colles', category_path('peinture-colles') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Finitions décoratives', category_path('finitions-decoratives') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Peintures ludiques', category_path('peintures-ludiques') %>
       </li>
       <li>
-        <a href="#">item1</a>
-      </li>
-      <li>
-        <a href="#">item1</a>
-      </li>
-      <li>
-        <a href="#">item1</a>
+        <%= link_to 'Peintures naturelles', category_path('peintures-naturelles') %>
       </li>
     </ul>
   </li>
   <li class="primary-category enduit">
     <%= link_to 'Enduits', category_path('enduits') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Charges et colorants pour enduits', category_path('charges-colorants-pour-enduits') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Enduits de finitions', category_path('enduits-de-finitions') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Enduits exterieurs', category_path('enduits-exterieurs') %>
       </li>
       <li>
-        <a href="#">item1</a>
-      </li>
-      <li>
-        <a href="#">item1</a>
+        <%= link_to 'Enduits intérieurs', category_path('enduits-interieurs') %>
       </li>
     </ul>
   </li>
   <li class="primary-category gros-oeuvre">
     <%= link_to 'Gros oeuvre', category_path('gros-oeuvre') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Briques et blocs', category_path('briques-blocs') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Charpentes', category_path('charpentes') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Chaux, terres et argiles', category_path('chaux-terres-argiles') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Plaques et panneaux', category_path('plaques-panneaux') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Préparation des supports', category_path('preparation-des-supports') %>
       </li>
     </ul>
   </li>
   <li class="primary-category bois">
     <%= link_to 'Bois', category_path('bois') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Colles et joints', category_path('colles-joints') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Diluants', category_path('diluants') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Huiles et cires protectrices', category_path('huiles-cires-protectrices') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Préparation et protection des supports', category_path('preparation-protection-supports') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Produits pour le bois', category_path('produits-bois') %>
       </li>
     </ul>
   </li>
   <li class="primary-category gros-oeuvre">
     <%= link_to 'Portes & fenêtres', category_path('portes-fenetres') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Fenêtres', category_path('fenetres') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to 'Portes', category_path('portes') %>
       </li>
       <li>
-        <a href="#">item1</a>
-      </li>
-      <li>
-        <a href="#">item1</a>
-      </li>
-      <li>
-        <a href="#">item1</a>
+        <%= link_to 'Volets', category_path('volets') %>
       </li>
     </ul>
   </li>
   <li class="primary-category gros-oeuvre">
     <%= link_to "Production d'énergie verte", category_path('production-energie-verte') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Batteries", category_path('batteries') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Eoliennes domestiques", category_path('eoliennes-domestiques') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Onduleurs", category_path('onduleurs') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Panneaux solaires photovoltaïques", category_path('panneaux-solaires-photovoltaiques') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Régulateurs", category_path('regulateurs') %>
       </li>
     </ul>
   </li>
   <li class="primary-category gros-oeuvre">
-    <%= link_to "Gros oeuvres", category_path('gros-oeuvre') %>
-    <ul>
+    <%= link_to "Économie d'énergie", category_path('systeme-economie-energie') %>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Ampoules basse consommation", category_path('ampoules-basse-consommation') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Programmateur de chauffe", category_path('programmateur-chauffe') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Programmateurs d'éclairage", category_path('programmateur-eclairage') %>
       </li>
       <li>
-        <a href="#">item1</a>
-      </li>
-      <li>
-        <a href="#">item1</a>
+        <%= link_to "Thermostats", category_path('thermostats') %>
       </li>
     </ul>
   </li>
   <li class="primary-category gros-oeuvre">
     <%= link_to "Chauffage", category_path('chauffage') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Chauffage de l'eau", category_path('chauffage-eau') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Chauffe-eaux solaires", category_path('chauffe-eaux-solaires') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Diffusion de chaleur", category_path('diffusion-chaleur') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Energie renouvelable", category_path('energie-renouvelable') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Poêles", category_path('poeles') %>
+      </li>
+      <li>
+        <%= link_to "Pompes à chaleur", category_path('pompes-chaleur') %>
+      </li>
+      <li>
+        <%= link_to "Renouvellement de l'air", category_path('Renouvellement-air') %>
       </li>
     </ul>
   </li>
   <li class="primary-category gros-oeuvre">
     <%= link_to "Isolation", category_path('isolation') %>
-    <ul>
+    <ul class="secondary-category">
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Isolation à l'humidité", category_path('isolation-humidite') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Isolation des cloisons", category_path('isolation-cloisons') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Isolation des combles", category_path('isolation-combles') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Isolation des murs", category_path('isolation-murs') %>
       </li>
       <li>
-        <a href="#">item1</a>
+        <%= link_to "Isolation du sol", category_path('isolation-sol') %>
+      </li>
+      <li>
+        <%= link_to "Isolation phonique", category_path('isolation-phonique') %>
       </li>
     </ul>
   </li>
