--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,9 +5,9 @@
         <li>
           <%= link_to 'Accueil', root_path %>
         </li>
-        <% if @product.category.parent_category %>
+        <% if @parent_category %>
           <li>
-            <%= link_to @product.category.parent_category.name, category_path(@product.category.parent_category.slug) %>
+            <%= link_to @parent_category.name, category_path(@parent_category.slug) %>
           </li>
         <% end %>
         <li>
