ajout de donnees obligatoire pour le produit et affiche le bon marchant sur la page produit

--- a/app/views/products/_bloc_product_tuto.html.erb
+++ b/app/views/products/_bloc_product_tuto.html.erb
@@ -1,7 +1,7 @@
 <div class="bloc-product-tuto">
   <div class="row">
   <div class="col-md-7 col-md-offset-1">
-      <h3>Tuto : comment enduire le lège</h3>
+      <h3>Tuto : comment enduire le liège</h3>
       <iframe src="https://player.vimeo.com/video/132372651" width="640" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       <a class="btn-default" href="/tutorials">Tous nos tutoriels</a>
     </div>
