--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -11,7 +11,7 @@ header {
 
   .navbar-brand{
 
-    padding:18px 5px;
+    padding:13px 5px;
     height:100%;
 
     #logo {
@@ -60,6 +60,7 @@ header {
 
       > a{
         text-shadow: none;
+        padding:10px;
 
         i{
           padding-right: 7px;
@@ -71,7 +72,7 @@ header {
   .searchbox {
     position:relative;
     min-width:50px;
-    height:50px;
+    height:40px;
     float:left;
     overflow:hidden;
     color:$text-color;
@@ -95,7 +96,7 @@ header {
         border:0;
         outline:0;
         width:100%;
-        height:50px;
+        height:100%;
         margin:0;
         padding:0px 20px 0px 55px;
         font-size:16px;
@@ -104,7 +105,7 @@ header {
 
     .searchbox-icon, .searchbox-submit{
       width:50px;
-      height:50px;
+      height:100%;
       display:block;
       position:absolute;
       top:0;
@@ -117,6 +118,12 @@ header {
       text-align:center;
       cursor:pointer;
       background-color:transparent;
+      display: table;
+
+      i{
+        display: table-cell;
+        vertical-align: middle;
+      }
     }
   }
 
