--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -2,7 +2,7 @@
 
 $green: #68C258;
 $green-light: #E9F6E6;
-$green-hover: #91bd5a;
+$green-hover: #63B854;
 $green-no-content: #45661d;
 
 $text-color: #1c1833;
