--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -52,107 +52,37 @@
           </ul>
       </div>
       <div class="col-md-6 col-sm-8 hidden-xs">
-          <h3>Meilleurs tutoriels</h3>
-            <ul>
-              <li>
-                <%= link_to category_path('peinture-colles') do %>
-                  perspiciatis unde
-                <% end %>
-              </li>
-              <li>
-                <%= link_to category_path('enduits') do %>
-                  perspiciatis unde
-                <% end %>
-              </li>
-              <li>
-              <%= link_to category_path('gros-oeuvre') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-             <li>
-              <%= link_to category_path('isolation') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('portes-fenetres') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('chauffage') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('production-energie-verte') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('systeme-economie-energie') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('bois') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-          </ul>
+      <h3>Liens utiles</h3>
+        <ul>
+          <li>
+            <%= link_to category_path('peinture-colles') do %>
+              Communauté Climateriaux
+            <% end %>
+          </li>
+          <li>
+            <%= link_to category_path('enduits') do %>
+              Expédition & Livraison
+            <% end %>
+          </li>
+          <li>
+            <%= link_to category_path('gros-oeuvre') do %>
+              Retours & Remboursements
+            <% end %>
+          </li>
+          <li>
+            <%= link_to category_path('isolation') do %>
+              Paiement sécurisé Paypal
+            <% end %>
+          </li>
+        </ul>
       </div>
-      <div class="col-md-6 col-sm-8 hidden-xs">
-          <h3>Matériaux populaires</h3>
-            <ul>
-              <li>
-                <%= link_to category_path('peinture-colles') do %>
-                  perspiciatis unde
-                <% end %>
-              </li>
-              <li>
-                <%= link_to category_path('enduits') do %>
-                  perspiciatis unde
-                <% end %>
-              </li>
-              <li>
-              <%= link_to category_path('gros-oeuvre') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-             <li>
-              <%= link_to category_path('isolation') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('portes-fenetres') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('chauffage') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('production-energie-verte') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('systeme-economie-energie') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-            <li>
-              <%= link_to category_path('bois') do %>
-                perspiciatis unde
-              <% end %>
-            </li>
-          </ul>
+       <div class="col-md-6 col-sm-8 hidden-xs">
+          <h3>Qui sommes-nous ?</h3>
+          <p>Lorem ipsum dolor sit amet madmoizelle lorem dola rosae mail contacter notre service client, un conseiller est disponible lundi.</p>
+          <a href="#">En savoir plus</a>
       </div>
       <div class="newsletter col-md-6 col-sm-24">
-        <h3>Newsletter</h3>
+        <h3>Inscription newsletter</h3>
         <input type="text" name="email" id="newsletter-mail"  placeholder="Votre adresse mail">
         <input type="submit" value="S'abonnez aux actus mail" id="" class="btn btn-default">
       </div>
@@ -162,6 +92,28 @@
     <div class="container">
       <div class="table-cell">
         <%= image_tag("logo.svg", :id => 'logo') %>
+        <ul>
+           <li>
+            <a href="#">
+              CGV
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Mentions légales
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Politique de confidentialité
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              Cookies
+            </a>
+          </li>
+        </ul>
         <ul class="social-network pull-right">
           <li>
             <a href="https://twitter.com/climateriaux" target="_blank" rel="nofollow" class="footer-social-twitter">
