--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,7 +48,7 @@
         BODY
 **********************/
 body{
-  padding-top:100px;
+  padding-top:80px;
   font-size:16px;
   font-weight: 100;
   font-family: 'GT Walsheim', sans-serif;
@@ -152,5 +152,11 @@ body{
 .navbar-custom {
   background-color: $green;
   border: none;
+}
+
+.box{
+  background-color:#fff;
+  @include border-radius($radius);
+  @include box-shadow($shadow);
 }
 
