--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,9 @@
 <div class="container-fluid page-category">
+  <div class="img-category">
+    <div class="display-tablCell">
+      <h1>Bois</h1>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-23 col-md-offset-1">
       <ol class="breadcrumb">
@@ -17,7 +22,10 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-24 col-md-23 col-md-offset-1">
+    <div class="category-sidebar box col-md-4 col-md-offset-1">
+      <h3>Catégories</h3>
+    </div>
+    <div class="col-xs-24 col-md-18 col-md-offset-1">
       <% @products.each do |product| %>
         <div class="col-md-6 col-xs-24">
           <%= render "product_row", product: product, order_item: @order_item %>
