--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,13 @@
 <section class="jumbotron">
   <div class="container">
     <h1>Tout pour votre projet, au même endroit</h1>
+    <!--
     <%= form_for search_path, url: search_path, :html => {:class => 'search-bar'}, method: :get do |f| %>
       <%= text_field_tag :search, params[:search], :class => 'search-field', placeholder: 'Rechercher sur Climateriaux' %>
       <%= button_tag(type: 'submit', class: "btn btn-default search-button") do %>
         <i class="fa fa-search" aria-hidden="true"></i>
       <% end %>
-    <% end %>
+    <% end %>-->
   </div>
 </section>
 <section class="categories-home">
