--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -22,39 +22,10 @@
     </div>
   </div>
   <div class="row">
-    <div class="category-sidebar box col-md-4 col-md-offset-1">
-      <div class="">
-        <h3>Catégories</h3>
-        <div class="field">
-          <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-          <label for="user_remember_me">Cloisons & Doublages (12)</label>
-        </div>
-        <div class="field">
-          <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-          <label for="user_remember_me">Cloisons & Doublages (12)</label>
-        </div>
-        <div class="field">
-          <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-          <label for="user_remember_me">Cloisons & Doublages (12)</label>
-        </div>
-      </div>
-      <div class="">
-        <h3>Types de bois</h3>
-        <div class="field">
-          <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-          <label for="user_remember_me">Cloisons & Doublages (12)</label>
-        </div>
-        <div class="field">
-          <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-          <label for="user_remember_me">Cloisons & Doublages (12)</label>
-        </div>
-        <div class="field">
-          <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-          <label for="user_remember_me">Cloisons & Doublages (12)</label>
-        </div>
-      </div>
+    <div class="category-sidebar box col-md-5 col-md-offset-1">
+      <%= render partial: "categories/sidebar" %>
     </div>
-    <div class="col-xs-24 col-md-18 col-md-offset-1">
+    <div class="col-xs-24 col-md-17 col-md-offset-1">
       <% @products.each do |product| %>
         <div class="col-md-6 col-xs-24">
           <%= render "product_row", product: product, order_item: @order_item %>
