--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,31 @@
 <div class="container-fluid page-category">
   <div class="img-category">
     <div class="display-tablCell">
-      <h1>Bois</h1>
+      <h1>Peintures & colles</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <a href="#">
+              <span>Tous les produits</span>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="#">
+              <span>peintures naturelles</span>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="#">
+              <span>Finitions décoratives</span>
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="#">
+              <span>peintures ludiques</span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -25,10 +49,10 @@
     <div class="category-sidebar box col-md-5 col-md-offset-1">
       <%= render partial: "categories/sidebar" %>
     </div>
-    <div class="col-xs-24 col-md-17 col-md-offset-1">
+    <div class="col-xs-24 col-md-16 col-md-offset-1">
       <% (0..6).each do |i| %>
         <% @products.each do |product| %>
-          <div class="col-md-6 col-xs-24">
+          <div class="col-md-8 col-xs-24">
             <%= render "product_row", product: product, order_item: @order_item %>
           </div>
         <% end %>
